# autogit

./: .gitignore  CMakeLists.txt  README.md  arg_parser.c  autogit.cmt  buildxrun.sh  meson.build  setup.py
autogit/: __init__.py  args_parser.py  autogit.py  loop.py  processor.py  test.py  utils.py
includes/: args_parser.h  autogit.h  cli.h  text_parser.h  utils.h
src/: args_parser.c  cli.c  loop.c  main.c  text_parser.c  utils.c
